# workspace

./: .deployment-config  .replit  app.json  app.py  auth_helper.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt
freelancer-export/marketing-site/: .vercelignore  AUTH_SETUP.md  USER_INSTRUCTIONS.md  next.config.mjs  package.json  pyproject.toml  streamlit_email_test.py  sw.js  ui_helpers.py
freelancer-export/marketing-site/.streamlit/: secrets.toml
freelancer-export/marketing-site/api/: requirements.txt
freelancer-export/marketing-site/app/: globals.css  layout.tsx  page.tsx.bak.1759278620  page.tsx.bak.1759397694  page.tsx.bak_hero_import  robots.ts  sitemap.ts
freelancer-export/marketing-site/app/after-checkout/: page.tsx
freelancer-export/marketing-site/app/auth/: page.tsx.bak
freelancer-export/marketing-site/app/blog/: posts-data.ts
freelancer-export/marketing-site/app/components/: Hero.tsx
freelancer-export/marketing-site/app/cookie-policy/: page.tsx
freelancer-export/marketing-site/app/dashboard/: page.tsx.bak.1759803510
freelancer-export/marketing-site/assets/: styles.css
freelancer-export/marketing-site/components/: AnalyticsLoader.tsx  BackToTop.tsx  CookieBanner.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  InstructionsFooter.tsx  MidCTA.tsx  MobileNav.tsx  PortalButton.tsx  ProCta.tsx  Why.tsx
freelancer-export/marketing-site/lib/: api.ts  email.ts  stripe.ts
freelancer-export/marketing-site/static/: manifest.webmanifest  privacy.html
freelancer-export/marketing-site/utils/: email_client.py
(+124 files in other folders)
