[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.49.1",
    "yfinance>=0.2.66",
    "pandas>=2.3.2",
    "numpy>=2.3.3",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "psycopg2-binary>=2.9.10",
    "python-dateutil>=2.9.0.post0",
    "qrcode[pil]>=8.2",
    "pillow>=11.3.0",
]
